fix: remove spacing and assertions

--- a/src/views/instances/details/deployment-summary.module.css
+++ b/src/views/instances/details/deployment-summary.module.css
@@ -4,7 +4,7 @@
     gap: 5px 20px;
     color: var(--colors-grey600);
     font-size: 14px;
-    padding: var(--spacers-dp12);
+    padding: 0 var(--spacers-dp12);
     margin-bottom: var(--spacers-dp16);
 }
 .singleDetails {
@@ -13,17 +13,13 @@
     justify-content: center;
     gap: 5px;
 }
+
 .title {
-    padding: 0px var(--spacers-dp12);
+    padding: 0 0 var(--spacers-dp12) var(--spacers-dp12);
     font-size: large;
     text-transform: capitalize;
-}
-.hr {
-    border: none;
-    border-top: 0.5px solid var(--colors-grey400);
+    border-bottom: 0.5px solid var(--colors-grey400);
     width: 100%;
-    margin: 0px;
-    padding: 0px;
 }
 .description {
     width: 50%;
